--- a/src/assets/css/messages.css
+++ b/src/assets/css/messages.css
@@ -130,6 +130,62 @@
     width: calc(100% - 330px);
     flex-grow: 1;
     min-height: 0;
+    padding: 10px 20px 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.__content .__header {
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+}
+
+/*.__header .__photo {
+    display: block;
+    flex-basis: 54px;
+    max-width: 54px;
+    width: 54px;
+}*/
+
+.__header .__info {
+    align-items: center;
+    display: flex;
+    flex-basis: calc(100% - 54px);
+    flex-wrap: wrap;
+    max-width: calc(100% - 54px);
+    padding-left: 10px;
+    width: calc(100% - 54px);
+}
+
+.__header .__info-item {
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    display: flex;
+}
+
+.__info-item .__name {
+    color: #404652;
+}
+
+.__info-item .__time {
+    color: #99a5b4;
+    max-width: 120px;
+    text-align: right;
+    width: 120px;
+}
+
+.__info-item .__subject {
+    color: #99a5b4;
+}
+
+.__content .__body {
+    border-top: 1px solid #e3e9ea;
+    color: #404652;
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 20px 30px 0 60px;
 }
 
 .__content {
