--- a/src/assets/css/attendance.css
+++ b/src/assets/css/attendance.css
@@ -52,6 +52,7 @@
     flex-shrink: 0;
     justify-content: center;
     font-weight: 500;
+    will-change: transform;
 }
 
 .b-graph__aliases {
@@ -174,4 +175,46 @@
 
 ._grey {
     color: #888;
+}
+
+.progress-attendance {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: #fff;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
+    font-family:
+        Helvetica Neue,
+        Arial,
+        Helvetica,
+        sans-serif;
+    font-size: 14px;
+    will-change: transform;
+    scroll-behavior: smooth;
+}
+
+.__progress-item {
+    border-bottom: 1px solid #e3e9ea;
+    display: flex;
+    flex-direction: column;
+    padding: 25px 10px;
+    box-sizing: border-box;
+    will-change: transform scroll-position;
+}
+
+.__progress-item .__title {
+    color: #8c97a5;
+    flex-shrink: 0;
+    font-weight: 500;
+    margin-bottom: 25px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.test {
+    border-radius: 5px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
+    height: calc(100% - 48px);
+    overflow: hidden;
 }
