--- a/src/assets/css/attendance.css
+++ b/src/assets/css/attendance.css
@@ -212,9 +212,6 @@
     font-size: 16px;
 }
 
-.test {
-    border-radius: 5px;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
-    height: calc(100% - 48px);
-    overflow: hidden;
+.apexcharts-tooltip span {
+    color: #000000;
 }
