feat: bug fix to fix attendance size not growing in some cases due to flex-grow missing, links tab now added and functional

--- a/src/assets/css/attendance.css
+++ b/src/assets/css/attendance.css
@@ -179,6 +179,7 @@
 
 .progress-attendance {
     display: grid;
+    flex-grow: 1;
     grid-template-columns: repeat(3, minmax(250px, 1fr));
     overflow-x: hidden;
     overflow-y: auto;
