--- a/src/public/assets/css/catppuccin-mocha/achievement.module.css
+++ b/src/public/assets/css/catppuccin-mocha/achievement.module.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
-    background: #fff;
+    background: var(--surface0);
     border-radius: 5px;
     z-index: 2;
     font-family:
@@ -37,6 +37,7 @@
         Helvetica,
         sans-serif;
     font-size: 14px;
+    margin-bottom: 15px;
 }
 
 .t-header {
@@ -45,6 +46,9 @@
     min-height: 40px;
     font-size: 12px;
     font-weight: 400;
+    background: var(--surface1);
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
 
 .t-body {
@@ -54,28 +58,14 @@
     max-height: 100%;
 }
 
-.t-header {
-    display: grid;
-    grid-template-columns:
-        130px
-        /* Type/Date */
-        1fr 1fr
-        /* Comment/Teacher, Action/Info */
-        200px 105px;
-    /* Award Points */
-    border-bottom: 1px solid #e3e9ea;
-}
-
+.t-header,
 .t-row {
     display: grid;
     grid-template-columns:
         260px
-        /* Type/Date */
         1fr 1fr
-        /* Comment/Teacher, Action/Info */
         200px 105px;
-    /* Award Points */
-    border-bottom: 1px solid #e3e9ea;
+    color: var(--text);
 }
 
 .t-header > div {
@@ -104,7 +94,7 @@
 }
 
 .t-row:nth-child(even) {
-    background-color: #ececec;
+    background-color: var(--surface1);
 }
 
 .t-row > ._comment_teacher,
@@ -115,27 +105,18 @@
     text-align: left;
 }
 
-.t-achievement__text ._points {
+._points {
     border-radius: 50%;
     height: 42px;
     width: 42px;
-    border: 1.2px solid green;
-    color: green;
+    border: 1.2px solid #6bb842;
+    color: #6bb842;
     font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
     line-height: 1;
-}
-
-.t-achievement__text {
-    width: 100%;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    /* Ensure it fills the full cell height */
+    margin: 0 auto;
 }
 
 ._grey {
@@ -151,7 +132,7 @@
 }
 
 .b-points-badge .__label {
-    background: linear-gradient(0deg, #49bd81, #6bb842);
+    background: #6bb842;
     align-items: center;
     border-radius: 0 3px 3px 0;
     color: #fff;
@@ -160,6 +141,7 @@
     margin-right: calc(56px / 2);
     padding-left: 20px;
     position: relative;
+    margin-bottom: 15px;
 }
 
 .b-points-badge .__label-text {
@@ -169,7 +151,7 @@
 }
 
 .b-points-badge .__total-points {
-    background: linear-gradient(0deg, #49bd81, #6bb842);
+    background: #6bb842;
     border-radius: 50%;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     font-size: 28px;
@@ -182,9 +164,4 @@
     top: 50%;
     transform: translateY(-50%);
     width: 56px;
-    font-family:
-        Helvetica Neue,
-        Arial,
-        Helvetica,
-        sans-serif;
 }
