--- a/src/public/assets/css/default/behaviour.module.css
+++ b/src/public/assets/css/default/behaviour.module.css
@@ -37,6 +37,7 @@
         Helvetica,
         sans-serif;
     font-size: 14px;
+    margin-bottom: 15px;
 }
 
 .t-header {
@@ -219,6 +220,7 @@
     margin-right: calc(56px / 2);
     padding-left: 20px;
     position: relative;
+    margin-bottom: 15px;
 }
 
 .b-points-badge .__label-text {
