--- a/src/public/assets/css/catppuccin-mocha/links.module.css
+++ b/src/public/assets/css/catppuccin-mocha/links.module.css
@@ -1,3 +1,5 @@
+@import "./colors.css";
+
 .box-container {
     display: flex;
     flex-direction: column;
@@ -21,7 +23,7 @@
     grid-template-columns: repeat(4, minmax(250px, 1fr));
     overflow-x: hidden;
     overflow-y: auto;
-    background: #fff;
+    background: var(--surface0);
     font-family:
         Helvetica Neue,
         Arial,
@@ -33,7 +35,6 @@
 }
 
 .__links-item {
-    border-bottom: 1px solid #e3e9ea;
     display: flex;
     flex-direction: column;
     padding: 25px 10px;
@@ -42,7 +43,7 @@
 }
 
 .__links-item .__title {
-    color: #8c97a5;
+    color: var(--text);
     flex-shrink: 0;
     font-weight: 500;
     margin-bottom: 25px;
