--- a/src/public/assets/css/catppuccin-mocha/forms.module.css
+++ b/src/public/assets/css/catppuccin-mocha/forms.module.css
@@ -1,10 +1,4 @@
-.__nav {
-    align-items: center;
-    display: flex;
-    flex-shrink: 0;
-    height: 32px;
-    margin-bottom: 10px;
-}
+@import "./colors.css";
 
 .box-container {
     display: flex;
@@ -28,7 +22,8 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
-    background: #fff;
+    background: var(--surface0);
+
     border-radius: 5px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
     z-index: 2;
@@ -41,11 +36,13 @@
 }
 
 .t-header {
-    color: #3090c7;
     text-align: center;
     min-height: 40px;
     font-size: 12px;
     font-weight: 400;
+    background: var(--surface1);
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
 
 .t-body {
@@ -57,8 +54,8 @@
 .t-header,
 .t-row {
     display: grid;
-    grid-template-columns: 1fr 100px 75px;
-    border-bottom: 1px solid #e3e9ea;
+    grid-template-columns: 1fr 100px 100px;
+    color: var(--text);
     text-align: center;
 }
 
@@ -67,17 +64,6 @@
     align-items: center;
     justify-content: center;
     padding: 0 5px;
-    font-weight: bold;
-    text-transform: capitalize;
-    min-width: 0;
-}
-
-.t-countdown {
-    display: flex;
-    color: #3090c7;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
     font-weight: bold;
     text-transform: capitalize;
     min-width: 0;
@@ -95,7 +81,7 @@
 }
 
 .t-row:nth-child(even) {
-    background-color: #ececec;
+    background-color: var(--surface1);
 }
 
 .t-row > ._name,
@@ -105,11 +91,6 @@
     text-align: left;
     font-weight: 400;
     word-wrap: break-word;
-}
-
-.__text {
-    width: 100%;
-    font-size: 14px;
 }
 
 ._grey {
