--- a/src/public/assets/css/catppuccin-mocha/messages.module.css
+++ b/src/public/assets/css/catppuccin-mocha/messages.module.css
@@ -1,3 +1,5 @@
+@import "./colors.css";
+
 .box-container {
     display: flex;
     flex-direction: column;
@@ -20,8 +22,6 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
-    background: #fff;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
     z-index: 2;
     font-family:
         Helvetica Neue,
@@ -39,8 +39,8 @@
 }
 
 .l-messages__items {
-    background-color: white;
-    border-right: 0.1px dashed #404652;
+    background: var(--surface0);
+    border-right: 0.1px dashed var(--text);
     height: 100%;
     width: 330px;
     flex-grow: 1;
@@ -94,6 +94,7 @@
     margin-left: 5px;
     max-width: calc(100% - 59px);
     width: calc(100% - 59px);
+    color: var(--text);
 }
 
 .l-messages__data {
@@ -126,7 +127,7 @@
 }
 
 .l-messages__content {
-    background: #fff;
+    background: var(--surface0);
     height: 100%;
     width: calc(100% - 330px);
     flex-grow: 1;
@@ -142,12 +143,12 @@
     flex-shrink: 0;
 }
 
-/*.__header .__photo {
+.__header .__photo {
     display: block;
     flex-basis: 54px;
     max-width: 54px;
     width: 54px;
-}*/
+}
 
 .__header .__info {
     align-items: center;
@@ -167,13 +168,14 @@
 }
 
 .__info-item .__name {
-    color: #404652;
+    color: var(--text);
 }
 
 .__info-item .__time {
     color: #99a5b4;
     max-width: 120px;
     text-align: right;
+    font-size: 14px;
     width: 120px;
 }
 
@@ -182,8 +184,7 @@
 }
 
 .__content .__body {
-    border-top: 1px solid #e3e9ea;
-    color: #404652;
+    color: var(--text);
     flex-grow: 1;
     overflow-y: auto;
     padding: 20px 30px 0 60px;
