fix: footer current/next lesson buttons not redirecting to timetable element on click/on click of them anyway they would redirect to wrong pos, progress bar reset fix so it can be used multiple times now, club page not being centered fixed

--- a/src/public/assets/css/catppuccin-mocha/clubs.module.css
+++ b/src/public/assets/css/catppuccin-mocha/clubs.module.css
@@ -129,6 +129,8 @@
 .club {
     background: var(--surface0);
     color: var(--text);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .club-cross {
