fix: forgot to include bg color for box even if not displayed as a fallback incase of issue, attendance no data color changed from white to black

--- a/src/public/assets/css/catppuccin-mocha/account.module.css
+++ b/src/public/assets/css/catppuccin-mocha/account.module.css
@@ -20,6 +20,8 @@
 .t-personal {
     display: flex;
     flex-direction: column;
+    background: var(--surface0);
+
     flex-grow: 1;
     min-height: 0;
     z-index: 2;
