--- a/src/public/assets/css/catppuccin-mocha/messages.module.css
+++ b/src/public/assets/css/catppuccin-mocha/messages.module.css
@@ -22,6 +22,7 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
+    background: var(--surface0);
     z-index: 2;
     font-family:
         Helvetica Neue,
