--- a/src/public/assets/css/catppuccin-mocha/achievement.module.css
+++ b/src/public/assets/css/catppuccin-mocha/achievement.module.css
@@ -1,10 +1,4 @@
-.__nav {
-    align-items: center;
-    display: flex;
-    flex-shrink: 0;
-    height: 32px;
-    margin-bottom: 10px;
-}
+@import "./colors.css";
 
 .box-container {
     display: flex;
