--- a/src/public/assets/css/default/clubs.module.css
+++ b/src/public/assets/css/default/clubs.module.css
@@ -1,11 +1,3 @@
-.__nav {
-    align-items: center;
-    display: flex;
-    flex-shrink: 0;
-    height: 32px;
-    margin-bottom: 10px;
-}
-
 .box-container {
     display: flex;
     flex-direction: column;
@@ -117,4 +109,10 @@
 
 ._grey {
     color: #888;
+}
+
+.club {
+    background: white;
+    margin-left: auto;
+    margin-right: auto;
 }
