--- a/src/public/assets/css/default/homework.module.css
+++ b/src/public/assets/css/default/homework.module.css
@@ -1,11 +1,3 @@
-.__nav {
-    align-items: center;
-    display: flex;
-    flex-shrink: 0;
-    height: 32px;
-    margin-bottom: 10px;
-}
-
 .box-container {
     display: flex;
     flex-direction: column;
@@ -111,4 +103,12 @@
 
 ._grey {
     color: #888;
+}
+
+.check-color {
+    color: #6bb842;
+}
+
+.cross-color {
+    color: #bd362f;
 }
